--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-notifications": "^1.7.4",
     "react-toastify": "^10.0.5",
+    "timeago.js": "^4.0.0-beta.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
